ci(Deploy): :rocket: Add redirect to index for Netlify

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "conventionalCommits.scopes": [
         "Event List",
         "User",
-        "Nav"
+        "Nav",
+        "Deploy"
     ]
 }
