--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,8 @@
             "tsConfig": "tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/_redirect"
             ],
             "styles": [
               "node_modules/ngf-bootstrap/dist/bootstrap.min.css",
