--- a/angular.json
+++ b/angular.json
@@ -25,7 +25,7 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
-              "src/_redirect"
+              "src/_redirects"
             ],
             "styles": [
               "node_modules/ngf-bootstrap/dist/bootstrap.min.css",
