--- a/angular.json
+++ b/angular.json
@@ -24,8 +24,7 @@
             "tsConfig": "tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
-              "src/assets",
-              "src/_redirects"
+              "src/assets"
             ],
             "styles": [
               "node_modules/ngf-bootstrap/dist/bootstrap.min.css",
